scripts/aws/deploy-flight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
  namespace: paathshala
spec:
  selector:
    matchLabels:
      app: flight-service
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: flight-service
    spec:
      containers:
        - name: flight-service
          image: 615360450654.dkr.ecr.us-east-2.amazonaws.com/flight-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: server
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service-svc-aws
  namespace: paathshala
  labels:
    app: flight-service
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: flight-service
