scripts/aws/deploy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: paathshala
  name: ingress-flight-service
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: flight-service-svc
              servicePort: 8081
